ART 5.1
* Perform automatic database upgrades

ART 5.0
* Fix for pivottable error with pt_BR localization
* Added schedule field for pipelines
* Increase size of username column in datasources
* Added start condition for jobs and pipelines
* Added configure_start_conditions permission
* Added BigQuery JDBC driver

ART 4.18
* Allow editing of datasource in multiple report edit
* Added extension option for csv report format
* Added import/export for pipelines
* Added running jobs page
* Updated sql server jdbc driver

ART 4.17
* Added job pipeline feature
* Added configure_pipelines permission

ART 4.16
* Allow setting a user's user groups via api
* Added REST endpoints for user groups
* Fix for error when retrieving report with parameter via api
* Updated calcite

ART 4.15
* Allow dynamic lov to use groovy data
* Apply max file upload setting to file parameter
* Include report parameters in get report REST endpoint
* Add REST endpoint to get report details by name
* Added max running option for individual reports

ART 4.14
* Added directDownload url option
* Added File parameter type
* Fix for problem with chained parameter with default values
* Added fileName report option
* Modified job fixed file name to be the base file name
* Fix for error while importing users
* Fix for MongoDB report error when data is empty
* Fix for groovy code run twice for MongoDB report type
* Fix for build from source error
* Updated jasny-bootstrap

ART 4.13
* Added overwrite option for record import
* Added German translation (thanks to Carsten Pohle)
* Show start report on home page if configured
* Allow cancelling of running queries
* Fix for default report group selection not working
* Allow date parameters to act as parents for chained parameters

ART 4.12.1
* Fix for error with multi parameter

ART 4.12
* Fix for incorrect export of reports that share datasources
* Fix for report import on sql server
* Added Link report type

ART 4.11