@@ -225,6 +225,7 @@ CREATE TABLE ART_QUERIES
 	OPEN_IN_NEW_WINDOW INTEGER,
 	MAX_RUNNING INTEGER,
 	MAX_RUNNING_PER_USER INTEGER,
+	REPORT_FORMATS VARCHAR(200),
 	CREATION_DATE TIMESTAMP,
 	CREATED_BY VARCHAR(50),
 	CREATED_BY_ID INTEGER,
